# hermes-polymarket-clob2-agent

./: .env.example  .gitignore  AGENTS.md  HERMES.md  README.md  design.md  plan_2.md  plan_4_5_real_wallet_replay_integration.md  plan_4_wallet_replay.md  plan_learning_loop.md  pyproject.toml  repo_audit.md  risk_policy.md
config/: campaign_v2.yaml  campaign_v2_candidate.yaml  crypto_latency.yaml  default.yaml  forward_paper.yaml  manual_watchlist.yaml  market_quality.yaml  markets.yaml  research.yaml  risk.yaml  strategy_arena.yaml  strike_rotation.yaml  trading_real.yaml  wallets.yaml
docs/: stage_1_prompt.md
scripts/: __init__.py  dry_run_order.py  paper_scan.py  smoke_public_data.py
tests/: test_agents_file.py  test_binance_historical.py  test_campaign_summary.py  test_cli.py  test_clob_v2_client.py  test_config.py  test_crypto_event_adapter.py  test_crypto_latency.py  test_crypto_latency_opportunity.py  test_crypto_latency_recorder.py  test_crypto_latency_storage.py  test_crypto_market_classifier.py  test_crypto_market_resolver.py  test_crypto_paper_watcher.py  test_crypto_watchlist_storage.py  test_data_sources_base.py  test_directional_mapping.py  test_environment_cli.py  test_evidence_dashboard.py  test_execution_modes.py  test_fair_value.py  test_forward_paper_diagnostics.py  test_forward_paper_lifecycle.py  test_forward_paper_quality.py  test_forward_paper_readiness.py  test_forward_reconciliation.py  test_forward_report_run_scope.py  test_kelly.py  test_l2_cli.py  test_l2_preflight.py  test_l2_recorder.py  test_learning_cli.py  test_learning_promotion.py  (+63 more)
(+134 files in other folders)
